plugins {
    id 'java'
    id "org.jetbrains.intellij" version "1.17.4"

}

group 'com.intellij'
version '1.0.0'

repositories {
//    mavenCentral()
    maven {
        url "https://maven.aliyun.com/nexus/content/groups/public/"
//        url 'https://plugins.gradle.org/m2/'
    }
//    mavenLocal()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17  // 或者使用你需要的 Java 版本，如 VERSION_17
    targetCompatibility = JavaVersion.VERSION_17  // 设置与编译目标兼容的 Java 版本
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version.set("2024.1.1")
    intellij.updateSinceUntilBuild.set(false)
}

patchPluginXml {
    changeNotes = """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>"""
}
test {
    useJUnitPlatform()
}